--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.0",
+    "clsx": "^2.1.0",
     "next": "^14.2.0",
+    "next-intl": "^3.15.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "next-intl": "^3.15.0",
-    "zustand": "^4.5.0",
-    "clsx": "^2.1.0",
     "tailwind-merge": "^2.3.0",
-    "@heroicons/react": "^2.1.0",
-    "framer-motion": "^11.2.0"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
