--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.0",
     "clsx": "^2.1.0",
+    "lucide-react": "^0.445.0",
     "next": "^14.2.0",
     "next-intl": "^3.15.0",
     "react": "^18.3.0",
