--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,19 @@
 services:
   frontend:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: node:20-alpine
     container_name: automation-fb-frontend
+    working_dir: /app
+    command: sh -c "npm install && npm run dev -- --hostname 0.0.0.0 --port 3003"
     ports:
-      - "3005:3003"
+      - "3003:3003"
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
       - NEXT_PUBLIC_API_URL=http://localhost:3004
+      - WATCHPACK_POLLING=true
+      - CHOKIDAR_USEPOLLING=true
+    volumes:
+      - .:/app
+      - /app/node_modules
     restart: unless-stopped
     networks:
       - automation-network
@@ -16,3 +21,4 @@ services:
 networks:
   automation-network:
     driver: bridge
+
