--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "automation-fb",
+  "name": "looklab",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3007",
+    "dev": "next dev -p 3003",
     "build": "next build",
-    "start": "next start -p 3007",
+    "start": "next start -p 3003",
     "lint": "next lint",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.445.0",
     "next": "^14.2.0",
     "next-intl": "^3.15.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.6.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
