--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.1.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
@@ -18,6 +19,7 @@
     "next-intl": "^3.15.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "reactflow": "^11.11.4",
     "tailwind-merge": "^2.6.0",
     "zustand": "^4.5.0"
   },
