--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+      - /app/.next
     restart: unless-stopped
     networks:
       - automation-network
@@ -21,4 +22,3 @@ services:
 networks:
   automation-network:
     driver: bridge
-
