--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.1.0",
+    "@tremor/react": "^3.18.7",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.445.0",
     "next": "^14.2.0",
