--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "build": "next build",
     "start": "next start -p 3003",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.709.0",
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.1.0",
+    "@prisma/client": "^5.20.0",
     "@tremor/react": "^3.18.7",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
@@ -34,7 +41,9 @@
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.2.0",
     "postcss": "^8.4.0",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.0",
+    "tsx": "^4.7.0",
     "typescript": "^5.4.0"
   },
   "engines": {
