--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.1.0",
     "@prisma/client": "^5.20.0",
+    "@react-oauth/google": "^0.12.2",
     "@tremor/react": "^3.18.7",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "framer-motion": "^12.23.24",
+    "google-auth-library": "^10.5.0",
     "jose": "^6.1.0",
     "lucide-react": "^0.445.0",
     "next": "^14.2.0",
