--- a/Caddyfile
+++ b/Caddyfile
@@ -1,5 +1,8 @@
+{
+    auto_https off
+}
+
 unlukimdir.com, www.unlukimdir.com {
     encode gzip
-
-    reverse_proxy app:3003
+    reverse_proxy automation-fb-frontend:3003
 }
